...
        <!--Application-->
        <scene sceneID="JPo-4y-FX3">
            <objects>
                <application id="hnw-xV-0zn" sceneMemberID="viewController">
                    <menu key="mainMenu" title="Main Menu" systemMenu="main" id="AYu-sK-qS6">
                        <items>
                            <menuItem title="SwitchActivation" id="1Xt-HY-uBw">
                                <modifierMask key="keyEquivalentModifierMask"/>
                                <menu key="submenu" title="SwitchActivation" systemMenu="apple" id="uQy-DD-JDr">
                                    <items>
                                        <menuItem title="About SwitchActivation" id="5kV-Vb-QxS">
                                            <modifierMask key="keyEquivalentModifierMask"/>
                                            <connections>
                                                <action selector="orderFrontStandardAboutPanel:" target="Ady-hI-5gd" id="Exp-CZ-Vem"/>
                                            </connections>
                                        </menuItem>
                                        <menuItem isSeparatorItem="YES" id="VOq-y0-SEH"/>
...
                                                <action selector="toggleFullScreen:" target="Ady-hI-5gd" id="dU3-MA-1Rq"/>
                                            </connections>
                                        </menuItem>
                                    </items>
                                </menu>
                            </menuItem>
                            <menuItem title="Window" id="aUF-d1-5bR">
                                <modifierMask key="keyEquivalentModifierMask"/>
                                <menu key="submenu" title="Window" systemMenu="window" id="Td7-aD-5lo">
                                    <items>
                                        <menuItem title="Minimize" keyEquivalent="m" id="OY7-WF-poV">
                                            <connections>
                                                <action selector="performMiniaturize:" target="Ady-hI-5gd" id="VwT-WD-YPe"/>
...
                <menu title="SwitchActivation" systemMenu="apple" id="RPH-Pv-FzP" customClass="StatusBarMenu" customModule="SwitchActivation" customModuleProvider="target">
                    <items>
                        <menuItem image="NSHomeTemplate" id="LDt-Cs-nXf">
                            <modifierMask key="keyEquivalentModifierMask"/>
                        </menuItem>
                        <menuItem isSeparatorItem="YES" id="pDD-7T-ckM"/>
                        <menuItem title="Show Main Window" id="WlE-sj-uIY">
                            <modifierMask key="keyEquivalentModifierMask"/>
                            <connections>
                                <action selector="showMainWindow:" target="B8D-0N-5wS" id="kC8-P3-zbC"/>
                            </connections>
                        </menuItem>
                        <menuItem isSeparatorItem="YES" id="D09-Bz-KFu"/>
...
